test/functions/castFormalTypeFromNonType-2.good
castFormalTypeFromNonType-2.chpl:4: error: Cannot perform a type cast on a non-type
